# open-data-version-control

./: .gitignore  README.md  pyproject.toml
documents/: reproducible_ds.pptx
notebooks/: data.ipynb  eda.ipynb  inference.ipynb  train.ipynb
src/model_code/: inference.py  train.py
src/tests/model_code/: test_inference.py  test_train.py
src/tests/utils/: test_evaluation.py  test_preprocessing.py
src/utils/: evaluation.py  preprocessing.py
