[tool.poetry]
name = "iris-classifier"
version = "0.1.0"
description = "A reproducible classification pipeline using Git, Poetry, Docker, and clean Python"
authors = ["Aakanksha"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
numpy = "^1.26"
scikit-learn = "^1.4"
matplotlib = "^3.8"
seaborn = "^0.13"
jupyter = "^1.0"
fire = "^0.5"
joblib = "^1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ipykernel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
